src/style.css
.container-fluid {
  border: 1px solid black;
  width: 850px;
  box-shadow: 5px 10px black;
  margin-top: 2%;
  margin-bottom: 3%;
  padding-bottom: 2%;
}

h1 {
  font-family: 'Staatliches';
  font-size: 80px;
  margin-top: 8%;
  text-align: center;
  animation-name: fade;
  animation-duration: 5s;
  animation-iteration-count: infinite;
}
h2 {
  font-family: 'Staatliches';
  text-align: center;
  font-size: 150px;
  line-height: 0.95;
}

h3 {
  font-family: 'Staatliches';
  text-align: center;
  padding-top: 10%;
}

h4 {
  font-family: 'Staatliches';
  text-align: center;
}

h6 {
  font-family: 'Staatliches';
  display: block;
  padding-top: 10%;
  text-align: center;
}

footer {
  border: 1px solid black;
  color: black;
  font-family: 'Staatliches';
  text-align: center;
  width: 300px;
  margin: 0 auto;
  opacity: 50%;
}

a {
  color: hotpink;
  font-family: 'Staatliches';
}

#humidity {
  color: #118a7e;
  padding: 0;
  font-family: 'PT Sans';
}

#windSpeed {
  color: #118a7e;
  padding: 0;
  font-family: 'PT Sans';
}

#currentLoc {
  width: 150 px;
  background-color: #118a7e;
  color: white;
  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
  font-family: 'PT Sans';
  border: none;
  border-radius: 45px;
  transition: all 0.3s ease 0s;
  cursor: pointer;
  outline: none;
  display: block;
  margin: 0 auto;
  margin-top: 10%;
}

.weather-forecast {
  margin-top: 20px;
  text-align: center;
  color: #000;
}

.weather-forecast-date {
  font-size: 16px;
  color: hotpink;
  font-family: 'Staatliches';
}

.weather-forecast-temperature-min {
  opacity: 0.5;
}

.weather-forecast-temperatures {
  font-size: 13px;
}

.material-icons {
  padding-top: 13px;
  text-align: center;
  padding-left: 30%;
}

.citySearch {
  text-align: center;
  font-family: 'PT Sans';
  border-radius: 45px;
}

#search-input {
  width: 70px;
  background-color: #118a7e;
  color: white;
  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
  font-family: 'PT Sans';
  border: none;
  border-radius: 45px;
  transition: all 0.3s ease 0s;
  cursor: pointer;
  outline: none;
}

#search-input:hover {
  background-color: #93e4c1;
  box-shadow: 0px 5px 10px #1f6f78;
  color: #fff;
}

.search {
  border: 0;
  border-radius: 45px;
  text-align: center;
  margin: 15px;
}

.b1 {
  margin-left: 90%;
  margin-top: -35%;
}

.b2 {
  margin-left: 90%;
  margin-top: 2%;
}

#celsius {
  font-family: 'Staatliches';
  width: 50px;
  height: 50px;
  border: none;
  border-radius: 45px;
  cursor: pointer;
  outline: none;
  font-size: 30px;
}

#farenheit {
  font-family: 'Staatliches';
  text-align: center;
  width: 50px;
  height: 50px;
  border: none;
  border-radius: 45px;
  transition: all 0.3s ease 0s;
  cursor: pointer;
  outline: none;
  font-size: 30px;
}

#buttonClick {
  width: 350px;
}

@keyframes fade {
  0% {
    color: #94f2d7;
  }
  25% {
    color: #63d8f2;
  }
  50% {
    color: #7672f2;
  }
  75% {
    color: #85b4f2;
  }
  100% {
    color: #ad8df2;
  }
}

.hotChoc {
  margin-left: 35%;
  margin-top: 10%;
  height: 120px;
  width: 120px;
}

#celsius {
  width: 50px;
}
#celsius:hover {
  animation: myAnim 2s ease 0s infinite normal forwards;
}
#farenheit {
  width: 50px;
}

#farenheit:hover {
  animation: myAnim 2s ease 0s infinite normal forwards;
}

@keyframes myAnim {
  0% {
    transform: translate(0);
  }

  20% {
    transform: translate(-2px, 2px);
  }

  40% {
    transform: translate(-2px, -2px);
  }

  60% {
    transform: translate(2px, 2px);
  }

  80% {
    transform: translate(2px, -2px);
  }

  100% {
    transform: translate(0);
  }
}

.icon {
  font-size: 12px;
}

